<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <DUT Name="ST_RGB_Out" Id="{09fee716-e643-419a-8fbc-36ba28b07b95}">
    <Declaration><![CDATA[TYPE ST_RGB_Out :
STRUCT
	arrRGB				AT %Q*			:ARRAY[1..24] OF UDINT;
	LifeSig				AT %Q*			:UINT;
	Command				AT %Q*			:UINT;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>